# everypy

./: .env-example  .gitignore  Dockerfile_bot  Dockerfile_csi  Dockerfile_gs  Dockerfile_otrs  README.md  docker-compose.yaml  main.py  pyproject.toml
csi_service/: __main__.py
csi_service/app/: main.py
csi_service/app/constants/: __init__.py  topics.py
csi_service/app/db/: engine.py  models.py  orm_query.py
csi_service/app/user_commands/: __init__.py  user_commands.py
csi_service/configs/: config.py
csi_service/infrastructure/: consumer.py  producer.py
e2_bot/: __main__.py  bot.py
e2_bot/app/: fmt_message_usecase.py
e2_bot/app/constants/: __init__.py  answers.py  topics.py
e2_bot/app/data_access/: __init__.py  test.py  (+3 more)
e2_bot/configs/: config.py
e2_bot/filtes/: __init__.py  group_admin.py
e2_bot/handlers/: __init__.py  funny_handlers.py  kafka_handler.py  service_handlers.py  user_handlers.py
e2_bot/infrastructure/: __init__.py  consumer.py  producer.py
e2_bot/keyboards/: __init__.py  cancel_kb.py  funny_kb.py  service_kb.py  set_menu.py
e2_bot/lexicon/: __init__.py  lexicon_ru.py
e2_bot/middlewares/: __init__.py  outer.py
gsheet_service/: __main__.py  gs_main.py
gsheet_service/configs/: config.py
gsheet_service/infrastructure/: __init__.py  consumer.py  producer.py
gsheet_service/service/: __init__.py  google_sheets.py
otrs_service/: __main__.py  main.py  otrs_main.py
otrs_service/app/: last_id.py
otrs_service/configs/: config.py
otrs_service/infrastructure/: consumer.py  producer.py
otrs_service/service/: service.py
(+53 files in other folders)
