[project]
name = "everypy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.19.0",
    "asyncpg>=0.30.0",
    "environs>=14.1.1",
    "greenlet>=3.1.1",
    "kafka-python>=2.1.5",
    "ruff>=0.11.4",
    "sqlalchemy>=2.0.40",
]
