[project]
name = "everypy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.19.0",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "environs>=14.1.1",
    "google-api-python-client>=2.166.0",
    "greenlet>=3.1.1",
    "gspread>=6.2.0",
    "kafka-python>=2.1.5",
    "loguru>=0.7.3",
    "oauth2client>=4.1.3",
    "ruff>=0.11.4",
    "sqlalchemy>=2.0.40",
]
